# wslaragon

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.agent/memory/: active_context.md  architecture.md  decisions.md
.agent/skills/librarian/: SKILL.md
.agent/skills/ui_designer/: SKILL.md
.github/workflows/: ci.yml
config/agentes_base/: 001-ProductAnalycst.md  002-SofwareAchitec.md  003-UXDesigner.md  004-FullStackDeveloper.md  005-SecuritySpecialist.md  006-QualityReviewer.md  007-manageGit.md
docs/: CLI.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  MCP.md  README.md  ROADMAP.md  SSL-DB.md  STRUCTURE.md  TROUBLESHOOTING.md  UBUNTU.md  WSLaragon_Supabase.md  glosario.md
meta_test/.agent/: .gitignore
meta_test/.agent/memory/: README.md
meta_test/.agent/skills/skill_creator/: SKILL.md
openspec/: config.yaml
openspec/changes/archive/2026-07-15-ubuntu-main-adaptation/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-15-ubuntu-main-adaptation/specs/ubuntu-installer/: spec.md
openspec/changes/archive/2026-07-15-ubuntu-main-adaptation/specs/ubuntu-project-artifacts/: spec.md
openspec/specs/ubuntu-host-management/: spec.md
openspec/specs/ubuntu-mcp-runtime/: spec.md
openspec/specs/ubuntu-mysql-user/: spec.md
openspec/specs/ubuntu-php-fpm/: spec.md
openspec/specs/ubuntu-site-creation/: spec.md
scripts/: install-web-service-fixed.sh  install-web-service.sh  install.sh  quick-start.sh  setup-env.sh  test-setup.sh  uninstall.sh  vars.sh  wslaragon-web.service
src/wslaragon/cli/: __init__.py  agent.py  doctor.py  main.py  mysql_commands.py  nginx_commands.py  node_commands.py  php_commands.py  service_commands.py  site_commands.py  ssl_commands.py
src/wslaragon/core/: config.py  platform.py  services.py
src/wslaragon/mcp/: server.py
src/wslaragon/services/: backup.py  mysql.py  nginx.py  php.py  site_creators.py  sites.py  ssl.py
src/wslaragon/services/agent/: agent_manager.py
src/wslaragon/services/node/: pm2.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_agent_cli.py  test_agent_manager.py  test_backup.py  test_cli.py  test_config.py  test_config_comprehensive.py  test_doctor.py  test_installer.py  test_main_cli.py  test_mcp_server.py  test_mysql.py  test_mysql_commands.py  test_nginx.py  test_nginx_commands.py  test_node_commands.py  test_php.py  test_php_commands.py  test_platform.py  test_pm2.py  test_service_commands.py  test_services.py  test_site_commands.py  test_site_creators.py  test_sites.py  test_sites_comprehensive.py  test_ssl.py  test_ssl_commands.py
