[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wslaragon"
version = "1.0.0"
description = "Laragon-style development environment manager for WSL2"
authors = [{name = "WSLaragon Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "psutil>=5.8.0",
    "colorama>=0.4.4",
    "rich>=12.0.0",
    "python-dotenv>=1.0.0",
    "pymysql>=1.0.0",
]

[project.scripts]
wslaragon = "wslaragon.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-username/wslaragon"
Repository = "https://github.com/your-username/wslaragon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"